--- a/style.css
+++ b/style.css
@@ -13,16 +13,16 @@ html {
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 50px; /* Vertically center the text there */
+    text-align: center;
     background-color: #f5f5f5;
   }
 
 /*Below is the CSS for the About Page*/
 header {
     font-size: 60px;
-    padding: ;
+    padding:50px;
 }
 #wrapper {
-    float: center ;
     padding-left: 60px;
     padding-top: 70px;
 }
@@ -31,6 +31,9 @@ header {
 
 #contact {
     color:#007bff;
+}
+.textbackgroundc {
+  background-color: blue;
 }
 
 /*Below is the CSS for the Portfolio Page*/
