I've turned the previous portolio images into cards. I'ds. I've added images or videos to the project. I have also successfully added links to github and the deployed sights.

--- a/docs/style.css
+++ b/docs/style.css
@@ -39,4 +39,9 @@ header {
 /*Below is the CSS for the Portfolio Page*/
 #portfolio {
     color:#007bff ;
+
+}
+.col-12 {
+  background: #6c757d;
+  max-height: 800px;
 }
