I've added my name and a placeholder email and number. I also added links to my github, linkedin and resume.

--- a/docs/style.css
+++ b/docs/style.css
@@ -26,6 +26,10 @@ header {
     padding-left: 60px;
     padding-top: 70px;
 }
+.col-9 {
+  height: 600px;
+  font-family: 'Times New Roman', Times, serif;
+}
 
 /*Below is the CSS for the Contact Page*/
 
